[tool.poetry]
name = "flume"
version = "0.1.3"
description = ""
authors = ["Jorge Zapata <jorgeluis.zapata@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyGObject = "^3.42.0"
python-dateutil = "^2.8.2"
SQLAlchemy = "^1.4.26"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.15.0"
black = "^21.9b0"
isort = "^5.9.3"

[tool.poetry.scripts]
flume-discovery = "flume.discoverer:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88 

[tool.isort]
profile = "black"
line_length = 88
